--- a/Sample/Sample/App.xaml
+++ b/Sample/Sample/App.xaml
@@ -3,6 +3,31 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Sample.App">
     <Application.Resources>
-
+        <ResourceDictionary>
+            <Style TargetType="Button">
+                <Setter Property="TextColor" Value="White" />
+                <Setter Property="BackgroundColor" Value="#990000ff" />
+            </Style>
+            <Style TargetType="Image">
+                <Setter Property="Aspect" Value="AspectFit" />
+                <Setter Property="VerticalOptions" Value="FillAndExpand" />
+                <Setter Property="HorizontalOptions" Value="FillAndExpand" />
+                <Setter Property="BackgroundColor" Value="LightGray" />
+            </Style>
+            <Style TargetType="Grid">
+                <Setter Property="Margin" Value="10" />
+                <Setter Property="RowSpacing" Value="10" />
+                <Setter Property="Padding" Value="0" />
+            </Style>
+            <Style TargetType="StackLayout">
+                <Setter Property="Margin" Value="0" />
+                <Setter Property="Spacing" Value="0" />
+                <Setter Property="Padding" Value="0" />
+            </Style>
+            <Style TargetType="ScrollView">
+                <Setter Property="Margin" Value="0" />
+                <Setter Property="Padding" Value="0" />
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
